fix for banner image height on mobile

--- a/src/css/community.less
+++ b/src/css/community.less
@@ -22,6 +22,10 @@
         height: 50vh;
         background-size: cover;
         background-position: center;
+
+        @media (max-width: @screen-xs-max) {
+          max-height: 320px;
+        }
       }
     }
 
